# online-value-validator

./: CMakeLists.txt  README.md  a.out  server.cpp  validormainwindow.cpp  validormainwindow.h  validormainwindow.ui
client/: CMakeLists.txt  main.cpp  validormainwindow.cpp  validormainwindow.h  validormainwindow.ui
server/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt  params.cpp  params.h
